Ajout des services, mappers et refactorisation des controllers pour toutes les entités métier, intégration des tests mockés et gestion de l’authentification JWT.