@@ -1,8 +1,10 @@
 package com.jlh.jlhautopambackend.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.jlh.jlhautopambackend.modeles.Client;
-import com.jlh.jlhautopambackend.repositories.ClientRepository;
+import com.jlh.jlhautopambackend.dto.ClientRequest;
+import com.jlh.jlhautopambackend.dto.ClientResponse;
+import com.jlh.jlhautopambackend.services.ClientService;
+import com.jlh.jlhautopambackend.config.JwtAuthenticationFilter;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -14,12 +16,11 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(
@@ -36,33 +37,35 @@ class ClientControllerTest {
     private ObjectMapper objectMapper;
 
     @MockitoBean
-    private ClientRepository repo;
+    private ClientService service;
+
+    @MockitoBean
+    private com.jlh.jlhautopambackend.utils.JwtUtil jwtUtil;
+
+    @MockitoBean
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
 
     @Test
     @DisplayName("GET /api/clients ➔ 200, JSON list non vide")
     void testGetAllNonEmpty() throws Exception {
-        Client c1 = Client.builder()
+        ClientResponse r1 = ClientResponse.builder()
                 .idClient(1)
-                .nom("Dupont")
-                .prenom("Jean")
+                .nom("Dupont").prenom("Jean")
                 .email("jean.dupont@example.com")
                 .telephone("0123456789")
                 .adresse("1 rue A")
                 .build();
-        Client c2 = Client.builder()
+        ClientResponse r2 = ClientResponse.builder()
                 .idClient(2)
-                .nom("Martin")
-                .prenom("Marie")
+                .nom("Martin").prenom("Marie")
                 .email("marie.martin@example.com")
                 .telephone("0987654321")
                 .adresse("2 avenue B")
                 .build();
 
-        Mockito.when(repo.findAll()).thenReturn(Arrays.asList(c1, c2));
+        Mockito.when(service.findAll()).thenReturn(List.of(r1, r2));
 
-        mvc.perform(get("/api/clients")
-                        .accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
+        mvc.perform(get("/api/clients").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$[0].idClient").value(1))
@@ -72,11 +75,9 @@ class ClientControllerTest {
     @Test
     @DisplayName("GET /api/clients ➔ 200, JSON liste vide")
     void testGetAllEmpty() throws Exception {
-        Mockito.when(repo.findAll()).thenReturn(Collections.emptyList());
+        Mockito.when(service.findAll()).thenReturn(Collections.emptyList());
 
-        mvc.perform(get("/api/clients")
-                        .accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
+        mvc.perform(get("/api/clients").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$").isArray())
@@ -86,19 +87,16 @@ class ClientControllerTest {
     @Test
     @DisplayName("GET /api/clients/{id} ➔ 200, JSON")
     void testGetByIdFound() throws Exception {
-        Client c = Client.builder()
+        ClientResponse resp = ClientResponse.builder()
                 .idClient(5)
-                .nom("Durand")
-                .prenom("Luc")
+                .nom("Durand").prenom("Luc")
                 .email("luc.durand@example.com")
                 .telephone("0112233445")
                 .adresse("3 chemin C")
                 .build();
-        Mockito.when(repo.findById(5)).thenReturn(Optional.of(c));
+        Mockito.when(service.findById(5)).thenReturn(Optional.of(resp));
 
-        mvc.perform(get("/api/clients/5")
-                        .accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
+        mvc.perform(get("/api/clients/5").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.idClient").value(5))
@@ -108,126 +106,101 @@ class ClientControllerTest {
     @Test
     @DisplayName("GET /api/clients/{id} ➔ 404")
     void testGetByIdNotFound() throws Exception {
-        Mockito.when(repo.findById(99)).thenReturn(Optional.empty());
+        Mockito.when(service.findById(99)).thenReturn(Optional.empty());
 
-        mvc.perform(get("/api/clients/99")
-                        .accept(MediaType.APPLICATION_JSON))
-                .andDo(print())
+        mvc.perform(get("/api/clients/99").accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
     }
 
     @Test
     @DisplayName("POST /api/clients ➔ 201, retourne JSON")
     void testCreate() throws Exception {
-        Client in = Client.builder()
-                .nom("Petit")
-                .prenom("Anne")
+        ClientRequest req = ClientRequest.builder()
+                .nom("Petit").prenom("Anne")
                 .email("anne.petit@example.com")
                 .telephone("0223344556")
                 .adresse("4 boulevard D")
                 .build();
-        Client saved = Client.builder()
+        ClientResponse created = ClientResponse.builder()
                 .idClient(10)
-                .nom(in.getNom())
-                .prenom(in.getPrenom())
-                .email(in.getEmail())
-                .telephone(in.getTelephone())
-                .adresse(in.getAdresse())
+                .nom(req.getNom()).prenom(req.getPrenom())
+                .email(req.getEmail())
+                .telephone(req.getTelephone())
+                .adresse(req.getAdresse())
                 .build();
 
-        Mockito.when(repo.save(Mockito.any())).thenReturn(saved);
+        Mockito.when(service.create(Mockito.any(ClientRequest.class))).thenReturn(created);
 
         mvc.perform(post("/api/clients")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(in)))
-                .andDo(print())
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isCreated())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(header().string("Location", "/api/clients/10"))
                 .andExpect(jsonPath("$.idClient").value(10))
-                .andExpect(jsonPath("$.nom").value("Petit"))
                 .andExpect(jsonPath("$.adresse").value("4 boulevard D"));
     }
 
     @Test
     @DisplayName("PUT /api/clients/{id} ➔ 200, retourne JSON mis à jour")
     void testUpdateFound() throws Exception {
-        Client existing = Client.builder()
-                .idClient(7)
-                .nom("OldNom")
-                .prenom("OldPrenom")
-                .email("old@example.com")
-                .telephone("0000000000")
-                .adresse("OldAdresse")
-                .build();
-        Client updates = Client.builder()
-                .nom("NewNom")
-                .prenom("NewPrenom")
+        ClientRequest updates = ClientRequest.builder()
+                .nom("NewNom").prenom("NewPrenom")
                 .email("new@example.com")
                 .telephone("1111111111")
                 .adresse("NewAdresse")
                 .build();
-        Client saved = Client.builder()
+        ClientResponse updated = ClientResponse.builder()
                 .idClient(7)
-                .nom("NewNom")
-                .prenom("NewPrenom")
+                .nom("NewNom").prenom("NewPrenom")
                 .email("new@example.com")
                 .telephone("1111111111")
                 .adresse("NewAdresse")
                 .build();
 
-        Mockito.when(repo.findById(7)).thenReturn(Optional.of(existing));
-        Mockito.when(repo.save(Mockito.any())).thenReturn(saved);
+        Mockito.when(service.update(Mockito.eq(7), Mockito.any(ClientRequest.class)))
+                .thenReturn(Optional.of(updated));
 
         mvc.perform(put("/api/clients/7")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(updates)))
-                .andDo(print())
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.idClient").value(7))
-                .andExpect(jsonPath("$.nom").value("NewNom"))
-                .andExpect(jsonPath("$.adresse").value("NewAdresse"))
                 .andExpect(jsonPath("$.telephone").value("1111111111"));
     }
 
     @Test
     @DisplayName("PUT /api/clients/{id} ➔ 404")
     void testUpdateNotFound() throws Exception {
-        Client updates = Client.builder()
-                .nom("X")
-                .prenom("Y")
+        ClientRequest updates = ClientRequest.builder()
+                .nom("X").prenom("Y")
                 .email("x@y.com")
                 .telephone("123")
                 .adresse("Z")
                 .build();
-        Mockito.when(repo.findById(42)).thenReturn(Optional.empty());
+        Mockito.when(service.update(Mockito.eq(42), Mockito.any(ClientRequest.class)))
+                .thenReturn(Optional.empty());
 
         mvc.perform(put("/api/clients/42")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(updates)))
-                .andDo(print())
                 .andExpect(status().isNotFound());
     }
 
     @Test
     @DisplayName("DELETE /api/clients/{id} ➔ 204, sans contenu")
     void testDeleteFound() throws Exception {
-        Client c = Client.builder().idClient(8).build();
-        Mockito.when(repo.findById(8)).thenReturn(Optional.of(c));
+        Mockito.when(service.delete(8)).thenReturn(true);
 
         mvc.perform(delete("/api/clients/8"))
-                .andDo(print())
-                .andExpect(status().isNoContent())
-                .andExpect(content().string(""));
+                .andExpect(status().isNoContent());
     }
 
     @Test
     @DisplayName("DELETE /api/clients/{id} ➔ 404")
     void testDeleteNotFound() throws Exception {
-        Mockito.when(repo.findById(99)).thenReturn(Optional.empty());
+        Mockito.when(service.delete(99)).thenReturn(false);
 
         mvc.perform(delete("/api/clients/99"))
-                .andDo(print())
                 .andExpect(status().isNotFound());
     }
 }
